# google-forms-to-plaintext

./: CHANGELOG.md  README.md  google-forms-to-plaintext.cabal
src/: Main.hs
